--- a/webapp/frontend/index.html
+++ b/webapp/frontend/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager</title>
-    <style>
-        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-        ul { list-style-type: none; padding: 0; }
-        li { margin-bottom: 10px; }
-    </style>
+    <title>Task List</title>
 </head>
 <body>
-    <h1>Task Manager</h1>
+    <h1>Task List</h1>
     <form id="taskForm">
-        <input type="text" id="taskInput" placeholder="Enter a new task" required>
+        <input type="text" id="taskInput" placeholder="Enter a new task">
         <button type="submit">Add Task</button>
     </form>
     <ul id="taskList"></ul>
@@ -28,11 +23,15 @@
                 .then(response => response.json())
                 .then(tasks => {
                     taskList.innerHTML = '';
-                    tasks.forEach(task => {
-                        const li = document.createElement('li');
-                        li.textContent = task.description;
-                        taskList.appendChild(li);
-                    });
+                    if (typeof tasks === 'object' && tasks !== null) {
+                        Object.values(tasks).forEach(task => {
+                            const li = document.createElement('li');
+                            li.textContent = task.description;
+                            taskList.appendChild(li);
+                        });
+                    } else {
+                        console.error('tasks is not an object:', tasks);
+                    }
                 });
         }
 
